# axiomatik.github.io

./: .gitignore  404.html  999-dni.html  999-dnu.html  CNAME  Cargo.toml  DEV.md  README.md  article.html  askama.toml  dev.sh  finance.html  index.html  jeden-tisic-dnu.html  news.html  republika.html  rustfmt.toml  shut_down.sh  start_server_dev.sh  technologie.html  veda.html  zahranici.html
configuration/: dev.toml  prod.toml  test.toml
css/: article.css  styles-dark.css  styles.css  webapp-dark.css  webapp.css
js/: account.js  change_password.js  form.js
pages/: account.html  change_password.html  create_user.html  form.html  login.html
snippets/: jeden-tisic-dnu.html.txt
src/: auth.rs  commands.rs  configuration.rs  content_management.rs  content_worker.rs  data.rs  database.rs  database_internal.rs  database_tools.rs  db.rs  db_tool.rs  external.rs  files.rs  form_account.rs  form_category.rs  form_change_password.rs  form_index.rs  form_login.rs  form_new_article.rs  form_new_article_data.rs  form_search.rs  lib.rs  library.rs  library_name_days.rs  logger.rs  main.rs  name_days.rs  namedays.rs  processor.rs  script_base.rs  server.rs  templates.rs  utils.rs  validate_media.rs  validation.rs
templates/: article_template.html  category_finance_template.html  category_republika_template.html  category_technologie_template.html  category_template.html  category_veda_template.html  category_zahranici_template.html  change_password.html  create_user.html  form.html  index_article_most_read.html  index_article_top_main.html  index_article_top_main_template.html  index_article_top_template.html  index_category.html  index_category_article.html  index_category_article_template.html  index_category_template.html  index_template.html  login.html  news_template.html  republika.html  snippet_template.html  technologie.html  zahranici.html
tests/: admin_tests.rs  integration_admin_tests.rs  integration_article_is_exclusive_tests.rs  integration_article_is_main_tests.rs  integration_article_republika_tests.rs  integration_article_tests.rs  integration_article_zahranici_tests.rs  integration_tests.rs  lib.rs  republika_limit_test.rs  search_test.rs  security_repro.rs  security_tests.rs  shift_article_test.rs  test_404_fallback.rs  test_404_fallback_curl.rs  test_account_page.rs  test_article.rs  test_article_build_from_template.rs  test_article_is_exclusive_tests.rs  test_article_is_main.rs  test_article_republika.rs  test_article_zahranici.rs  test_base.rs  test_category_finance_build_from_template.rs  test_category_republika_build_from_template.rs  test_category_technologie_build_from_template.rs  test_category_veda_build_from_template.rs  test_category_zahranici_build_from_template.rs  test_change_password.rs  test_command_create_editor_user.rs  test_command_print_from_db.rs  test_config.rs  test_db_search_logic.rs  test_image_upload.rs  test_index_build_from_template.rs  test_index_integration.rs  test_login.rs  test_malicious_keyword_rejection.rs  test_news_build_from_template.rs  (+15 more)
(+261 files in other folders)
